# godot-devkit

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  sync.sh
.claude/agents/: code-reviewer.md
.claude/skills/consumer-smoke/: SKILL.md
.claude/skills/release/: SKILL.md
checks/: doc_scan.py  repo_hygiene.sh  shellcheck.sh  tres_format_scan.sh  uid_scan.sh
introspect/: autoloads.py  introspect  orphans.py  refs.py  scene_diff.py  scene_summary.py
src/godot_devkit/: __init__.py  autoloads.py  cli.py  orphans.py  project.py  refs.py  scene_diff.py  scene_summary.py  tscn.py
src/godot_devkit/checks/: doc.py  repo_hygiene.py  shell.py  tres.py  uid.py
