[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "godot-devkit"
version = "0.3.0"
description = "Headless dev tooling for Godot 4.x - pure-parse scene introspection (summary/diff/refs/orphans/autoloads) + static repo gates (uid, tres-format, doc, shell, repo-hygiene)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Chris Dowin" }]
keywords = ["godot", "gamedev", "tooling", "tscn", "lint"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Repository = "https://github.com/cdowin/godot-devkit"

[project.scripts]
godot-devkit = "godot_devkit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/godot_devkit"]
